[package]
name = "quick-start"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.198", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = {version= "0.5.2", features = ["fs"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
goose =  {version="0.17", default-features=false, features=["rustls-tls"]}
futures-concurrency = "7.6.0"
serde_json = "1.0.116"

[[bin]]
name = "bench"
path = "src/bench.rs"
